# frontend/src/openapi.json
@@ -903,7 +903,7 @@
         ]
       }
     },
-    "/beltradar/api/manage/belt-timer/{timer_id}/modify/{field}/value/{value}/": {
+    "/beltradar/api/manage/belt-timer/{timer_id}/modify/": {
       "post": {
         "operationId": "beltradar_api_timer_modify_belt_timer",
         "summary": "Modify Belt Timer",
@@ -914,24 +914,6 @@
             "schema": {
               "title": "Timer Id",
               "type": "integer"
-            },
-            "required": true
-          },
-          {
-            "in": "path",
-            "name": "field",
-            "schema": {
-              "title": "Field",
-              "type": "string"
-            },
-            "required": true
-          },
-          {
-            "in": "path",
-            "name": "value",
-            "schema": {
-              "title": "Value",
-              "type": "string"
             },
             "required": true
           }
@@ -986,7 +968,7 @@
             }
           }
         },
-        "description": "Modify a specific field of a belt timer in a survey session.\n\nThis Endpoint allows users to modify a specific field of a belt timer within a survey session.\nThe user must have permission to modify the survey session, and the survey session must exist.\n\nArgs:\n    timer_id (int): The ID of the belt timer to modify.\n    field (str): The field of the belt timer to modify.\n    value (str): The new value to set for the specified field.\nReturns:\n    200: A success message indicating the belt timer was modified.\n    400: An error message if the input data is invalid or cannot be parsed.\n    403: An error message if the user does not have permission or the session is not found.\n    404: An error message if the belt timer is not found.",
+        "description": "Modify a belt timer.\n\nThis Endpoint allows users to modify all fields of a belt timer that is not\nlinked to a survey session.\nThe user must have permission to manage the belt timer.\n\nArgs:\n    timer_id (int): The ID of the belt timer to modify.\nReturns:\n    200: A success message indicating the belt timer was modified.\n    400: An error message if the timer is linked to a session or input data is invalid.\n    403: An error message if the user does not have permission.\n    404: An error message if the belt timer is not found.",
         "tags": [
           "Belt-Timer"
         ],
@@ -1782,6 +1764,11 @@
               }
             ],
             "title": "Is Expired"
+          },
+          "has_session": {
+            "default": false,
+            "title": "Has Session",
+            "type": "boolean"
           },
           "actions": {
             "anyOf": [
